fix scrollbar filtre

--- a/css/chatsAdoption.css
+++ b/css/chatsAdoption.css
@@ -186,7 +186,13 @@
 	padding: 10px;
 	transition: transform 0.3s ease;
 	overflow: scroll;
+	direction: rtl;
 }
+
+#menuFiltre * {
+	direction: ltr;
+}
+
 
 
 #filtreTitre {
